--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/boss.ico">
   <link rel="stylesheet" type="css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
   <!--     
     <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
