--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <title>Boss</title>
+  <title>BiggBoss</title>
 </head>
 
 <body>
